<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    app:layout_behavior="@string/prompt_title"
    tools:context="com.frobom.reminder.DetailActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/prompt_title"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="106dp">

        <AutoCompleteTextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/prompt_Description"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:maxLines="4" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/prompt_Date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/prompt_Time"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txtPath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/prompt_Alarm"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>




</LinearLayout>
